# EduVerse-AI-main-backend

./: .gitignore  Quizzes notes.txt  pyproject.toml
app/: main.py
app/auth/: auth_service.py  dependencies.py  router.py
app/core/: settings.py
app/crud/: admins.py  assignment.py  assignment_submissions.py  assignments.py  course.py  courses.py  quiz.py  quiz_submission.py  quiz_submissions.py  quizzes.py  student.py  student_performance.py  students.py  superAdmin.py  super_admin.py  teachers.py  tenants.py  users.py
app/crud/dashboards/: admin_dashboard.py
app/db/: database.py
app/routers/: assignment_submissions.py  assignments.py  courses.py  quiz_submissions.py  quizzes.py  student_assignments.py  student_courses.py  student_performance.py  student_quizzes.py  students.py  superAdmin.py  tenants.py
app/routers/auth/: admin_auth.py  student_auth.py  teacher_auth.py
app/routers/dashboards/: admin_dashboard.py
app/routers/roles/: admins.py  students.py  super_admin.py  teachers.py
app/schemas/: admins.py  assignment.py  assignmentSubmissions.py  assignment_submissions.py  assignments.py  course.py  courses.py  quiz.py  quiz_submission.py  quiz_submissions.py  quizzes.py  student.py  student_performance.py  students.py  superAdmin.py  super_admin.py  teachers.py  tenants.py  users.py
app/utils/: guards.py  mongo.py  security.py
